apps/whatsapp/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: whatsapp-ingress-ext
  namespace: tools
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`whatsapp.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: whatsapp
          port: main
